--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "eosjs": "^16.0.9"
+    "eosjs": "^20.0.0-beta2",
+    "node-fetch": "^2.2.1",
+    "text-encoding": "^0.7.0"
   }
 }
